--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
       },
       {
         "name": "RvT Token",
-        "path": "#rvt_token"
+        "path": "#token"
       },
       {
         "name": "Resources",
