--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,10 @@
       },
       {
         "name": "RvT Token",
-        "path": "#rvt_token"
+        "path": "#token"
+      },{
+        "name": "RvT Sale",
+        "path": "#token-sale"
       },
       {
         "name": "Resources",
@@ -105,7 +108,7 @@
       },
       {
         "name":"RvT Token",
-        "path": "#rvt_token"
+        "path": "#token"
       }
     ]
   }
