--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "type": "module",
   "main": "index.mjs",
   "scripts": {
+    "start": "node index.mjs",
+    "debug": "node --inspect=0.0.0.0:9229 index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
